# diffcast

./: .gitignore  README.md  app.py  app.spec  builddmg.sh  diffcast.iss  diffcast.spec  diffrunner.py  output.py  playdiff.py  setup.cfg  windows.py  windows_3.py  windows_4.py  windows_6.py
demos/: demo2.py  demo3.py  demo4.py  windows_1.py  windows_2.py  windows_3.py  windows_4.py  windows_5.py  windows_6.py
diffcast/: app.py  cli.py  diffrunner.py  viewer.py
diffcast/images/: icon.icns
