[metadata]
name = diffcast-mfitzp
version = 0.0.1
author = Martin Fitzpatrick
author_email = martin@mfitzp.com
description = Auto-generate coding demos & screencasts from Python code files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mfitzp/diffcast
project_urls =
    Bug Tracker = https://github.com/mfitzp/diffcast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src